Make map settings as plugin